NB CZ 44 (C++20 CD):
Allow constexpr construct_at/destroy_at for automatic storage duration

--- a/source/expressions.tex
+++ b/source/expressions.tex
@@ -7134,13 +7134,17 @@ is a valid core constant expression unless:
 \item
   for a call to \tcode{std::construct_at} or \tcode{std::ranges::construct_at},
   the first argument, of type \tcode{T*},
-  does not point to storage allocated with \tcode{std::allocator<T>} or
+  does not point
+  to storage allocated with \tcode{std::allocator<T>} or
+  to an object whose lifetime began within the evaluation of \tcode{e}, or
   the evaluation of the underlying constructor call
   is not a core constant expression, or
 \item
   for a call to \tcode{std::destroy_at} or \tcode{std::ranges::destroy_at},
   the first argument, of type \tcode{T*},
-  does not point to storage allocated with \tcode{std::allocator<T>} or
+  does not point
+  to storage allocated with \tcode{std::allocator<T>} or
+  to an object whose lifetime began within the evaluation of \tcode{e}, or
   the evaluation of the underlying destructor call
   is not a core constant expression.
 \end{itemize}
