--- a/source/expressions.tex
+++ b/source/expressions.tex
@@ -1292,30 +1292,6 @@ shall appear only
 \end{itemize}
 
 \pnum
-An \grammarterm{id-expression}
-that denotes the specialization of a concept\iref{temp.concept}
-results in a prvalue of type \tcode{bool}.
-The expression is \tcode{true} if
-the concept's normalized
-\grammarterm{constraint-expression}\iref{temp.constr.decl}
-is satisfied\iref{temp.constr.constr}
-by the specified template arguments
-and \tcode{false} otherwise.
-\begin{example}
-\begin{codeblock}
-template<typename T> concept C = true;
-static_assert(C<int>);          // OK
-\end{codeblock}
-\end{example}
-\begin{note}
-A concept's constraints are also considered
-when using a template name\iref{temp.names}
-and during overload resolution\iref{over},
-and they are compared
-during the partial ordering of constraints\iref{temp.constr.order}.
-\end{note}
-
-\pnum
 A program that refers
 explicitly or implicitly
 to a function with a trailing \grammarterm{requires-clause}
@@ -7299,9 +7275,6 @@ An expression or conversion is an \defn{immediate invocation}
 if it is an explicit or implicit invocation of an immediate function and
 is not in an immediate function context.
 An immediate invocation shall be a constant expression.
-\begin{note}
-An immediate invocation is evaluated even in an unevaluated operand.
-\end{note}
 
 \pnum
 An expression or conversion \tcode{e} is \defn{manifestly constant-evaluated}
@@ -7310,9 +7283,8 @@ if it is:
 \item a \grammarterm{constant-expression}, or
 \item the condition of a constexpr if statement\iref{stmt.if}, or
 \item an immediate invocation, or
-\item a \grammarterm{constraint-expression}\iref{temp.constr.decl}
-including one formed from the \grammarterm{constraint-logical-or-expression}
-of a \grammarterm{requires-clause}, or
+\item the result of substitution into an atomic constraint expression
+to determine whether it is satisfied\iref{temp.constr.atomic}, or
 \item the initializer of a variable
 that is usable in constant expressions or
 has constant initialization.\footnote{Testing this condition
@@ -7339,6 +7311,10 @@ int q = p + f();                                        // \tcode{m} is 17 for t
 \end{codeblock}
 \end{example}
 \end{itemize}
+\begin{note}
+A manifestly constant-evaluated expression
+is evaluated even in an unevaluated operand.
+\end{note}
 
 \pnum
 \indextext{expression!potentially constant evaluated}%
